UIFR-226: Update to OpenMRS platform 2.7.3 and Support Java 21